Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1978

When deleting misaligned blocks, log block manager may corrupt data

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.1.0
    • 1.4.0
    • fs
    • None

    Description

      When faced with repeated sequences of misaligned blocks, the LBM may corrupt one while deleting its neighbor. This is due to the aligning behavior in the hole punching code: aligning up to the nearest filesystem block boundary is incorrect behavior if the following block is misaligned.

      Note: misaligned blocks in the LBM are incredibly rare. To see them, you must have been victimized by KUDU-1793. Repeated sequences of misaligned blocks are even rarer; I'm not even sure if they're possible.

      Attachments

        Activity

          People

            adar Adar Dembo
            adar Adar Dembo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: